# mi-ag-python-workspace

linux_server_wrapper/: VERSION
linux_server_wrapper/C_wrapper/: build.sh
linux_server_wrapper/C_wrapper/demo/: c_demo  crash_context_v1  demo.c
linux_server_wrapper/C_wrapper/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
linux_server_wrapper/C_wrapper/src/: CMakeLists.txt  agora_rtc_audio_frame_observer_wrapper.hpp  agora_rtc_callback_wrapper.hpp  agora_rtc_proxy.cpp  agora_rtc_proxy.h  agora_rtc_wrapper.cpp  agora_rtc_wrapper.h  callback.pb-c.c  callback.pb-c.h  callback.proto
linux_server_wrapper/Python_wrapper/: build.sh
linux_server_wrapper/Python_wrapper/demo/: crash_context_v1  demo.py  juren.py  juren626.py  output_16k2.pcm  shangtang.py
linux_server_wrapper/Python_wrapper/demo/io.agora.rtc_sdk/: 0A4DC35F6ED54F86E61A3292D302BB57.dmp  ECD161DD367C4E9CEB1695A810479F67.dmp
linux_server_wrapper/Python_wrapper/src/: agora_cpython.c
linux_server_wrapper/agora_sdk/: libjsoncpp.so.25
linux_server_wrapper/agora_sdk/include/: AgoraBase.h  NGIAgoraLocalUser.h
linux_server_wrapper/agora_sdk/include/protobuf-c/: cache_items.proto  gen.sh  message.proto  meta_service.proto  metering_report.proto  protobuf_wrapper.cpp  protobuf_wrapper.h  rtmp_report_items.proto  rtmsdk.proto  rtmsdk_report_items.proto  vosdk_report_items.proto
linux_server_wrapper/config/: rtc_config.json
